XASM/Compiler/Parser.cs
using System.Collections.Generic;

// Set the name of your grammar here (and at the end of this grammar):


using XASM;

namespace XASM {


namespace Compiler{

public class Parser {
	public const int _EOF = 0;
	public const int _ident = 1;
	public const int _intergerLiteral = 2;
	public const int _floatLiteral = 3;
	public const int _charLiteral = 4;
	public const int _stringLiteral = 5;
	public const int _colon = 6;
	public const int _openBracket = 7;
	public const int _closeBracket = 8;
	public const int _openBrace = 9;
	public const int _closeBrace = 10;
	public const int maxT = 47;

	const bool T = true;
	const bool x = false;
	const int minErrDist = 2;
	
	public Scanner scanner;
	public Errors  errors;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;

ScriptEmitter emitter;// = new ScriptEmit();
	Scope global = new Scope();
	Scope currScope;
	Dictionary<string,int> lineLabels = new Dictionary<string,int>();

// If you want your generated compiler case insensitive add the
// keyword IGNORECASE here.


	public Parser(Scanner scanner, ScriptEmitter emitter, Errors errorsStream) {
		this.scanner = scanner;
		this.emitter = emitter;
		errors = errorsStream;
	}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (string msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	bool StartOf (int s) {
		return set[s, la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}


	bool WeakSeparator(int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) {Get(); return true;}
		else if (StartOf(repFol)) {return false;}
		else {
			SynErr(n);
			while (!(set[syFol, kind] || set[repFol, kind] || set[0, kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	
	void literal(out Value lit) {
		lit = new Value(); 
		if (la.kind == 2) {
			Get();
			lit = new Value(int.Parse(t.val)); 
		} else if (la.kind == 3) {
			Get();
			lit = new Value(float.Parse(t.val)); 
		} else if (la.kind == 4) {
			Get();
			lit = new Value(char.Parse(t.val)); 
		} else if (la.kind == 5) {
			Get();
			lit = new Value(emitter.AddString(t.val),ValType.stringLiteral); 
		} else SynErr(48);
	}

	void identifier(out string name) {
		Expect(1);
		name = t.val; 
	}

	void operand(out Value operand) {
		operand = new Value(); 
		string name; Value lit;
		
		if (StartOf(1)) {
			literal(out lit);
			operand.Assign(lit); 
		} else if (la.kind == 1) {
			identifier(out name);
			operand.type = ValType.stackReference;
			if (!currScope.ContainVariable(name) 
			&& !currScope.ContainParameter(name)
			&& (name.CompareTo("retval") != 0))
			SemErr(name + " is not defined");
			operand.s = name;
			
			if (la.kind == 7) {
				Get();
				if (la.kind == 2) {
					Get();
				} else if (la.kind == 1) {
					identifier(out name);
				} else SynErr(49);
				Expect(8);
			}
		} else SynErr(50);
	}

	void variableDeclare(out string name) {
		
		Expect(11);
		identifier(out name);
		Value lit;
		currScope.AddVariable(name);
		System.Console.WriteLine(name + " " + (currScope.IsGlobalScope ? "global" : "local")); 
		
		if (la.kind == 7) {
			Get();
			Expect(2);
			Expect(8);
			
		}
	}

	void parameterDeclare(out string name) {
		Expect(12);
		identifier(out name);
		currScope.AddParameter(name);
		System.Console.WriteLine(name + " param"); 
		
	}

	void linelabelDeclare(out string name) {
		identifier(out name);
		Expect(6);
		
	}

	void instruction(out Instruction instr) {
		Value op1,op2,op3; 
		string name;
		instr = new Instruction(OpCode.ret);
		switch (la.kind) {
		case 13: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr = new Instruction(OpCode.mov, op1 ,op2); 
			break;
		}
		case 15: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.add, op1,op2); 
			break;
		}
		case 16: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.sub, op1,op2); 
			break;
		}
		case 17: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.mul, op1,op2); 
			break;
		}
		case 18: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.div, op1,op2); 
			break;
		}
		case 19: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.mod, op1,op2); 
			break;
		}
		case 20: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.exp, op1,op2); 
			break;
		}
		case 21: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.and, op1,op2); 
			break;
		}
		case 22: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.or, op1,op2); 
			break;
		}
		case 23: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.xor, op1,op2); 
			break;
		}
		case 24: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.shl, op1,op2); 
			break;
		}
		case 25: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			instr  = new Instruction(OpCode.shr, op1,op2); 
			break;
		}
		case 26: {
			Get();
			identifier(out name);
			instr  = new Instruction(OpCode.call, new Value(name,ValType.intergerLiteral)); 
			break;
		}
		case 27: {
			Get();
			identifier(out name);
			instr  = new Instruction(OpCode.callhost, new Value(emitter.AddHAPI(name))); 
			break;
		}
		case 28: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.push, op1); 
			break;
		}
		case 29: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.pop, op1); 
			break;
		}
		case 30: {
			Get();
			identifier(out name);
			instr  = new Instruction(OpCode.jmp,new Value(name)); 
			break;
		}
		case 31: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.neg, op1); 
			break;
		}
		case 32: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.inc, op1); 
			break;
		}
		case 33: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.dec, op1); 
			break;
		}
		case 34: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.not, op1); 
			break;
		}
		case 35: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.pause, op1); 
			break;
		}
		case 36: {
			Get();
			operand(out op1);
			instr  = new Instruction(OpCode.exit, op1); 
			break;
		}
		case 37: {
			Get();
			instr  = new Instruction(OpCode.ret); 
			break;
		}
		case 38: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.je,op1,op2,new Value(name)); 
			break;
		}
		case 39: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.jne,op1,op2,new Value(name)); 
			break;
		}
		case 40: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.jg,op1,op2,new Value(name)); 
			break;
		}
		case 41: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.jl,op1,op2,new Value(name)); 
			break;
		}
		case 42: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.jge,op1,op2,new Value(name)); 
			break;
		}
		case 43: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			identifier(out name);
			instr  = new Instruction(OpCode.jle,op1,op2,new Value(name)); 
			break;
		}
		case 44: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			operand(out op3);
			instr  = new Instruction(OpCode.getchar,op1,op2,op3); 
			break;
		}
		case 45: {
			Get();
			operand(out op1);
			Expect(14);
			operand(out op2);
			Expect(14);
			operand(out op3);
			instr  = new Instruction(OpCode.setchar,op1,op2,op3); 
			break;
		}
		default: SynErr(51); break;
		}
		
	}

	void functionDeclare(out Function func) {
		string name; string funcname = string.Empty; Instruction instr;
		List<Instruction> instrs = new List<Instruction>();
		Dictionary<string,int> linelabels = new Dictionary<string,int>();
		int paramCount = 0,varCount = 0,entry = emitter.CurrentLine;
		Expect(46);
		identifier(out name);
		currScope = global.AddScope(name);		//todo check function duplicate
		funcname = name; 
		Expect(9);
		while (StartOf(2)) {
			if (la.kind == 12) {
				parameterDeclare(out name);
				paramCount ++; 
			} else if (la.kind == 11) {
				variableDeclare(out name);
				varCount ++;	
			} else if (la.kind == 1) {
				linelabelDeclare(out name);
				linelabels.Add(name,entry + instrs.Count); 
			} else {
				instruction(out instr);
				instrs.Add(instr); 
			}
		}
		instrs.Add(new Instruction(OpCode.ret)); 
		Expect(10);
		foreach (var kvp in linelabels){
		emitter.AddLineLabel(kvp.Key,kvp.Value);
		}
		System.Console.WriteLine();
		System.Console.WriteLine(currScope.ToString());
		for (int ic = 0; ic< instrs.Count;ic++){
		for (int oc = 0; oc<instrs[ic].operands.GetLength(0);oc++){
		if (instrs[ic].operands[oc].type == ValType.stackReference){
		if (currScope.ContainVariable(instrs[ic].operands[oc].s))
			instrs[ic].operands[oc].i = currScope.GetStackIndexOfVariable(instrs[ic].operands[oc].s);
		else instrs[ic].operands[oc].i = currScope.GetStackIndexOfParameter(instrs[ic].operands[oc].s);
		}
		}
		emitter.AddInstruction(instrs[ic]);
		System.Console.WriteLine(emitter.CurrentLine-1 + " : " + instrs[ic]);
		}
		func = new Function(entry,paramCount,varCount,funcname); 
	}

	void XASM() {
		string name; Function func; int globalDataSize = 0; currScope = global; 
		currScope.AddVariable("retval"); 
		while (la.kind == 11 || la.kind == 46) {
			if (la.kind == 11) {
				variableDeclare(out name);
				globalDataSize++; 
			} else {
				functionDeclare(out func);
				int funcindex = emitter.AddFunction(func);
				System.Console.WriteLine("entry : " + func.entryPoint);
				System.Console.WriteLine(func.paramCount + " parameter");
				System.Console.WriteLine(func.varCount + " local variable");
				  if (string.Compare(func.funcName,"main")==0) {
				    emitter.mainFuncIndex = funcindex;
				 }
				
			}
		}
		emitter.AddInstruction(new Instruction(OpCode.exit,new Value(0)));
		emitter.globalDataSize = globalDataSize; 
		System.Console.WriteLine("globalDataSize =" + emitter.globalDataSize);
		System.Console.WriteLine("mainFuncIndex =" + emitter.mainFuncIndex);
		
		
		
	}



	public void Parse() {
		la = new Token();
		la.val = "";		
		Get();
		XASM();
		Expect(0);

    Expect(0);
	}
	
	bool[,] set = {
		{T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,T,x,x, x,x,x,x, x,x,x,T, T,T,x,T, T,T,T,T, T,T,T,T, T,T,T,T, T,T,T,T, T,T,T,T, T,T,T,T, T,T,T,T, T,T,x,x, x}

	};
} // end Parser


public class Errors {
	public int count = 0;                                    // number of errors detected
	public System.IO.TextWriter errorStream;				// error messages go to this stream
	public string errMsgFormat = "-- line {0} col {1}: {2}"; // 0=line, 1=column, 2=text
	
	public Errors(){errorStream = System.Console.Out;}
	public Errors(System.IO.TextWriter tw){errorStream = tw;}

	public void SynErr (int line, int col, int n) {
		string s;
		switch (n) {
			case 0: s = "EOF expected"; break;
			case 1: s = "ident expected"; break;
			case 2: s = "intergerLiteral expected"; break;
			case 3: s = "floatLiteral expected"; break;
			case 4: s = "charLiteral expected"; break;
			case 5: s = "stringLiteral expected"; break;
			case 6: s = "colon expected"; break;
			case 7: s = "openBracket expected"; break;
			case 8: s = "closeBracket expected"; break;
			case 9: s = "openBrace expected"; break;
			case 10: s = "closeBrace expected"; break;
			case 11: s = "\"var\" expected"; break;
			case 12: s = "\"param\" expected"; break;
			case 13: s = "\"mov\" expected"; break;
			case 14: s = "\",\" expected"; break;
			case 15: s = "\"add\" expected"; break;
			case 16: s = "\"sub\" expected"; break;
			case 17: s = "\"mul\" expected"; break;
			case 18: s = "\"div\" expected"; break;
			case 19: s = "\"mod\" expected"; break;
			case 20: s = "\"exp\" expected"; break;
			case 21: s = "\"and\" expected"; break;
			case 22: s = "\"or\" expected"; break;
			case 23: s = "\"xor\" expected"; break;
			case 24: s = "\"shl\" expected"; break;
			case 25: s = "\"shr\" expected"; break;
			case 26: s = "\"call\" expected"; break;
			case 27: s = "\"callhost\" expected"; break;
			case 28: s = "\"push\" expected"; break;
			case 29: s = "\"pop\" expected"; break;
			case 30: s = "\"jmp\" expected"; break;
			case 31: s = "\"neg\" expected"; break;
			case 32: s = "\"inc\" expected"; break;
			case 33: s = "\"dec\" expected"; break;
			case 34: s = "\"not\" expected"; break;
			case 35: s = "\"pause\" expected"; break;
			case 36: s = "\"exit\" expected"; break;
			case 37: s = "\"ret\" expected"; break;
			case 38: s = "\"je\" expected"; break;
			case 39: s = "\"jne\" expected"; break;
			case 40: s = "\"jg\" expected"; break;
			case 41: s = "\"jl\" expected"; break;
			case 42: s = "\"jge\" expected"; break;
			case 43: s = "\"jle\" expected"; break;
			case 44: s = "\"getchar\" expected"; break;
			case 45: s = "\"setchar\" expected"; break;
			case 46: s = "\"func\" expected"; break;
			case 47: s = "??? expected"; break;
			case 48: s = "invalid literal"; break;
			case 49: s = "invalid operand"; break;
			case 50: s = "invalid operand"; break;
			case 51: s = "invalid instruction"; break;

			default: s = "error " + n; break;
		}
		errorStream.WriteLine(errMsgFormat, line, col, s);
		count++;
	}

	public void SemErr (int line, int col, string s) {
		errorStream.WriteLine(errMsgFormat, line, col, s);
		count++;
	}
	
	public void SemErr (string s) {
		errorStream.WriteLine(s);
		count++;
	}
	
	public void Warning (int line, int col, string s) {
		errorStream.WriteLine(errMsgFormat, line, col, s);
	}
	
	public void Warning(string s) {
		errorStream.WriteLine(s);
	}
} // Errors


public class FatalError: System.Exception {
	public FatalError(string m): base(m) {}
}
}}